--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ a {
 }
 
 p {
-  font-size: 15.5px;
+  font-size: 16px;
 }
 
 .hero {
@@ -82,7 +82,7 @@ p {
   clear: both;
   /*float: right;*/
   width: 20%;
-  height: 100%;
+  /*height: 100%;*/
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #2589bd;
 }
@@ -195,7 +195,7 @@ p {
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   font-size: 36px;
 }
 
@@ -227,7 +227,7 @@ p {
   justify-content: space-between;
 }
 .benefits {
-  display: block;
+  display: flexbox;
   padding: 20px;
   justify-content: space-between;
 }
